--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "eslib.h": "c",
-        "bmplib.h": "c"
+        "bmplib.h": "c",
+        "niveau1.h": "c",
+        "niveau3.h": "c",
+        "time.h": "c"
     }
 }
